fixed overlapping

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -112,3 +112,26 @@ body{
   max-width: 100% !important;
   display: block;
 }
+
+
+@media (max-width:768px){
+
+.navbar .container{
+  display:flex;
+  flex-direction:column;
+  align-items:stretch;
+}
+
+.navbar form{
+  width:100%;
+}
+
+.navbar input{
+  width:100%;
+  margin-bottom:0.5rem;
+}
+
+.navbar button{
+  width:100%;
+}
+}
